# kinect_calibration

./: CMakeLists.txt  README.md  package.xml  setup.py
508594442542/: calib_color.yaml  calib_pose.yaml
508594442542/yaml/: 0000_ir_points.yaml  0000_sync_ir_points.yaml  0001_color_points.yaml  0001_ir_points.yaml  0002_color_points.yaml  0002_ir_points.yaml  0002_sync_color_points.yaml  0003_color_points.yaml  0003_sync_color_points.yaml  0003_sync_ir_points.yaml  0004_ir_points.yaml  0004_sync_color_points.yaml  0004_sync_ir_points.yaml  0005_color_points.yaml  0005_ir_points.yaml  0005_sync_color_points.yaml  0005_sync_ir_points.yaml  0006_color_points.yaml  0006_ir_points.yaml  0006_sync_color_points.yaml  0007_ir_points.yaml  0007_sync_color_points.yaml  0007_sync_ir_points.yaml  0008_color_points.yaml  0008_sync_color_points.yaml  0008_sync_ir_points.yaml  0009_color_points.yaml  0009_ir_points.yaml  0009_sync_ir_points.yaml  0010_color_points.yaml  0010_ir_points.yaml  0010_sync_color_points.yaml  0010_sync_ir_points.yaml  0011_color_points.yaml  0011_ir_points.yaml  0011_sync_color_points.yaml  0011_sync_ir_points.yaml  0012_color_points.yaml  0012_ir_points.yaml  0012_sync_color_points.yaml  (+752 more)
509462242542/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
509462242542/yaml/: 0000_color_points.yaml  0000_ir_points.yaml  0000_sync_color_points.yaml  (+50 more)
launch/: run_extrinsic_calib_kinect.launch  run_extrinsic_calib_webcam.launch  tf_listen.launch
script/: extrinsic.py  extrinsic_calibration.py  run_extrinsic_calib.py  tf_listner.py
(+83 files in other folders)
